--- a/cmd/tileserver/template/_header.html
+++ b/cmd/tileserver/template/_header.html
@@ -6,9 +6,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>TileProxy</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 [[ embed ]]
 </body>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
 </html>
