--- a/cmd/tileserver/template/index.html
+++ b/cmd/tileserver/template/index.html
@@ -1,14 +1,11 @@
 [[$port:=.port]]
 [[$layers:=.layers]]
 
-[[ range .ips ]]
-<h4>Local ip [[.]]</h4>
+<h4>Layers</h4>
 <ul>
-    [[$ip:=.]]
     [[ range $layers ]]
-    <li>[[.name]]:<br/><span class="font-monospace">http://[[- $ip -]]:[[- $port -]][[- .url -]]</span></li>
+    <li>[[.name]]:<br/><span class="font-monospace">http://&lt;external_ip&gt;:[[- $port -]][[- .url -]]</span></li>
 [[ end ]]
 </ul>
 
-[[ end ]]
 <a href="/map">Map</a>
